--- a/app/blocks/photo-preview/photo-preview.scss
+++ b/app/blocks/photo-preview/photo-preview.scss
@@ -404,8 +404,15 @@
   }
 
   &__description {
+    position: relative;
+    width: 100%;
+
     &:not(:first-child) {
       margin-top: 8px;
+    }
+
+    .choices.is-open {
+      z-index: 5;
     }
   }
 }
