--- a/app/blocks/request-info/request-info.scss
+++ b/app/blocks/request-info/request-info.scss
@@ -60,6 +60,8 @@
 
   &__row {
     width: 50%;
+    // padding-right: 25px;
+    box-sizing: border-box;
 
     @include screen('md') {
       display: flex;
@@ -76,6 +78,8 @@
     }
 
     &_status {
+      padding-right: 0;
+
       @include screen('md') {
         padding: 12px 0 11px;
       }
@@ -106,6 +110,7 @@
     }
 
     &_renter {
+      padding-right: 0;
       padding-bottom: 50px;
 
       @include screen('md') {
