--- a/app/blocks/section/section.scss
+++ b/app/blocks/section/section.scss
@@ -47,6 +47,13 @@
     }
   }
 
+  &_lead {
+    @include screen('sm') {
+      position: relative;
+      z-index: 3;
+    }
+  }
+
   &_pb2 {
     position: relative;
     padding-bottom: 80px;
