--- a/app/blocks/filter-select/filter-select.scss
+++ b/app/blocks/filter-select/filter-select.scss
@@ -69,20 +69,21 @@
     transition: opacity $ease-main;
 
     @include screen('sm') {
-      position: absolute;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
       display: inline-flex;
       flex-direction: column;
       align-items: flex-start;
-      z-index: 2;
+      z-index: 25;
       opacity: 0;
       pointer-events: none;
-      background-color: $color-bg;
-      top: 100%;
-      left: 0;
-      min-width: 290px;
-      padding: 10px 0;
-      border-top: 1px solid $color-basic;
-      border-bottom: 1px solid $color-basic;
+      background-color: $color-white;
+      box-sizing: border-box;
+      padding-top: 57px;
+      padding-bottom: 56px;
     }
 
     #{$b}.is-open & {
@@ -93,12 +94,55 @@
     }
   }
 
+  &__header {
+    color: $color-basic;
+    padding: 0 40px;
+    box-sizing: border-box;
+    background-color: $color-white;
+    z-index: 5;
+    height: 70px;
+
+    @include screen('sm') {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      position: absolute;
+      padding: 0 19px;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 48px;
+      border-bottom: 1px solid $color-border-light;
+      z-index: 2;
+    }
+  }
+
+  &__title {
+    @include heading-3;
+
+    font-weight: 700;
+    user-select: none;
+
+    @include screen('sm') {
+      @include heading-4;
+    }
+  }
+
+  &__close {
+    position: absolute;
+    top: 6px;
+    left: 9px;
+    z-index: 2;
+  }
+
   &__item {
     display: inline-block;
 
     @include screen('sm') {
       display: block;
-      width: 100px;
+      width: 100%;
+      box-sizing: border-box;
+      padding: 6px 13px 7px;
     }
 
     &:not(:last-child) {
@@ -110,7 +154,6 @@
 
       @include screen('sm') {
         margin-right: 0;
-        margin-bottom: 4px;
       }
     }
   }
