--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -39,6 +39,10 @@
     z-index: 10;
     // background-color: $color-bg;
 
+    @include screen('md') {
+      z-index: 0;
+    }
+
     @include screen('sm') {
       // position: fixed;
       top: 0;
