fixes for bubles and notifications

--- a/app/blocks/notification/notification.scss
+++ b/app/blocks/notification/notification.scss
@@ -564,6 +564,7 @@
     display: inline-block;
     line-height: (20 / 16);
     width: 100%;
+    overflow: hidden;
 
     @include screen('sm') {
       @include text13;
