signup new, signup verification step1 & step2

--- a/app/blocks/form/form.scss
+++ b/app/blocks/form/form.scss
@@ -66,6 +66,12 @@
       }
     }
 
+    &_mg43 {
+      &:not(:last-of-type) {
+        margin-bottom: 43px;
+      }
+    }
+
     &_mg50 {
       &:not(:last-of-type) {
         margin-bottom: 50px;
@@ -89,6 +95,12 @@
     &_mg65 {
       &:not(:last-of-type) {
         margin-bottom: 65px;
+      }
+    }
+
+    &_mg66 {
+      &:not(:last-of-type) {
+        margin-bottom: 66px;
       }
     }
 
@@ -289,6 +301,14 @@
 
       @include screen('sm') {
         margin-bottom: 25px;
+      }
+    }
+
+    &_mg65 {
+      margin-bottom: 65px;
+
+      @include screen('sm') {
+        margin-bottom: 50px;
       }
     }
 
@@ -512,6 +532,14 @@
       height: auto;
     }
 
+    &_shiftl {
+      margin-left: -8px;
+
+      @include screen('lg') {
+        margin-left: 0;
+      }
+    }
+
     &:not(:last-child) {
       margin-bottom: 39px;
 
@@ -547,6 +575,12 @@
       }
     }
 
+    &_mg22 {
+      &:not(:last-child) {
+        margin-bottom: 22px;
+      }
+    }
+
     &_pt {
       padding-top: 6px;
 
@@ -563,6 +597,15 @@
       justify-content: flex-end;
       align-items: flex-end;
       align-content: flex-end;
+    }
+
+    &_pb {
+      padding-bottom: 5px;
+      box-sizing: border-box;
+
+      @include screen('md') {
+        padding-bottom: 0;
+      }
     }
 
     &_negative-mg {
