--- a/app/blocks/grid/grid.scss
+++ b/app/blocks/grid/grid.scss
@@ -50,6 +50,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     }
   }
 
+  &_content {
+    margin-top: -58px;
+
+    @include screen('sm') {
+      margin-top: -24px;
+    }
+  }
+
   &_big {
     margin-left: -$grid-gap-big / 2;
     margin-right: -$grid-gap-big / 2;
@@ -132,6 +140,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
     margin-top: -10px;
   }
 
+  &_int59 {
+    margin-top: -59px;
+
+    @include screen('sm') {
+      margin-top: -50px;
+    }
+  }
+
   &_int48 {
     margin-top: -48px;
 
@@ -142,14 +158,6 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
 
   &_reserv {
     margin-top: -60px;
-  }
-
-  &_content {
-    margin-top: -58px;
-
-    @include screen('sm') {
-      margin-top: -24px;
-    }
   }
 
   &_t55 {
@@ -236,6 +244,14 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       }
     }
 
+    #{$b}_content & {
+      padding-top: 58px;
+
+      @include screen('sm') {
+        padding-top: 24px;
+      }
+    }
+
     #{$b}_big & {
       padding: $grid-gap-vertical-big $grid-gap-big / 2 0;
     }
@@ -296,11 +312,11 @@ $new-breakpoints: map_remove($breakpoints, $default-breakpoit-name);
       padding-top: 60px;
     }
 
-    #{$b}_content & {
-      padding-top: 58px;
+    #{$b}_int59 & {
+      padding-top: 59px;
 
       @include screen('sm') {
-        padding-top: 24px;
+        padding-top: 50px;
       }
     }
 
