--- a/app/blocks/social-button/social-button.scss
+++ b/app/blocks/social-button/social-button.scss
@@ -22,6 +22,11 @@
     @include text15;
   }
 
+  &_h60 {
+    height: 60px;
+    padding: 10px 40px;
+  }
+
   &_white {
     background-color: $color-white;
   }
@@ -45,6 +50,10 @@
     #{$b}_gg & {
       width: 20px;
       height: 21px;
+    }
+
+    #{$b}_h60 & {
+      left: 20px;
     }
   }
 
