--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -42,6 +42,7 @@ include ../blocks/footnote/footnote
 include ../blocks/form-box/form-box
 include ../blocks/form-elements/form-elements
 include ../blocks/form-panel/form-panel
+include ../blocks/form-toggle/form-toggle
 include ../blocks/form/form
 include ../blocks/gradients/gradients
 include ../blocks/grid/grid
@@ -106,6 +107,7 @@ include ../blocks/selectable-block/selectable-block
 include ../blocks/short-info/short-info
 include ../blocks/short-profile/short-profile
 include ../blocks/short-space/short-space
+include ../blocks/side-image/side-image
 include ../blocks/sidebar/sidebar
 include ../blocks/sign-input/sign-input
 include ../blocks/signatures/signatures
