--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -160,6 +160,7 @@ $color-viewing: #cfb067;
 $color-user-link-active: #9ea7b3;
 $color-notice-bg: #ecf5f7;
 $color-notice-bg-hover: #d9e8eb;
+$color-form-toggle-title: #1f242a;
 
 // ##########
 // Transitions
