--- a/app/blocks/gradients/gradients.pug
+++ b/app/blocks/gradients/gradients.pug
@@ -4,6 +4,12 @@ mixin gradients()
       linearGradient#main-gradient(x1="0%" y1="0%" x2="100%" y2="0%")
         stop(offset="0%" stop-color="#30e3c9")
         stop(offset="100%" stop-color="#0caecc")
+      linearGradient#main-gradient-v(x1="0%" y1="0%" x2="0%" y2="100%")
+        stop(offset="0%" stop-color="#30e3c9")
+        stop(offset="100%" stop-color="#0caecc")
+      linearGradient#main-gradient-vi(x1="0%" y1="0%" x2="0%" y2="100%")
+        stop(offset="0%" stop-color="#0caecc")
+        stop(offset="100%" stop-color="#30e3c9")
       linearGradient#form-gradient1(x1="0%" y1="0%" x2="0%" y2="100%")
         stop(offset="0%" stop-color="rgba(29, 213, 240, 1)")
         stop(offset="28%" stop-color="rgba(41, 247, 133, 1)")
