--- a/app/components/content/content.scss
+++ b/app/components/content/content.scss
@@ -323,6 +323,14 @@
     }
   }
 
+  &_mt40 {
+    margin-top: 40px;
+
+    @include screen('lg') {
+      margin-top: 20px;
+    }
+  }
+
   &_reverse {
 
     .container {
