--- a/app/pages/signup-verification-message/signup-verification-message.pug
+++ b/app/pages/signup-verification-message/signup-verification-message.pug
@@ -4,15 +4,12 @@ block head
   - var pageTitle = 'SpacePool - Sign Up Verification Message'
 
 block content
-  +content-origin._reverse._last._heading
+  +content-origin._reverse._last._mt40
     .container
       +grid.grid_layout.grid_content
-        +col({ xl: 4, lg: 12})
-          +sidebar._no-bg(data-unstick-media="lg")
-            +heading('assets/images/heading-bg2.jpg')._mask2._wide
-              +e.H1.title Sign Up
-              +note._color._color_green._lh26.__note Almost there. Just few more things to&nbsp;go. Please verify your new account.
-        +col({ xl: 8, lg: 12})
+        +col({ xl: 4, md: 12}).hide-md
+          +side-image('assets/images/created-account.svg')._vf1
+        +col({ xl: 8, md: 12})
           +success-message
             +e.buttons
               +grid.grid_layout
