--- a/app/pages/sitemap/sitemap.pug
+++ b/app/pages/sitemap/sitemap.pug
@@ -23,9 +23,6 @@ block content
         +link(href="host-reservations-old-version.html") HOST reservations OLD (host-reservations-old-version.html)
         +link(href="order-summary.html") Order summary(order-summary.html)
         +link(href="order-checkout.html") Order checkout(order-checkout.html)
-        +link(href="signup.html") Sign Up (signup.html)
-        +link(href="signup-verification-message.html") Sign Up verification message (signup-verification-message.html)
-        +link(href="host-signup-verification-message.html") Sign Up verification message (for host) (host-signup-verification-message.html)
         +link(href="about-tenant.html") About Space Pool for Guests (about-tenant.html)
         +link(href="about-host.html") About Space Pool for Hosts (about-host.html)
         +link(href="new-space-step1.html") SpacePool - HOST My rental offers New Space Step 1 (new-space-step1.html)
@@ -46,6 +43,11 @@ block content
         +link(href="deal-passport-state3.html") SpacePool - Deal Passport (deal-passport-state3.html)
         +link(href="deal-passport-state4.html") SpacePool - Deal Passport (deal-passport-state4.html)
         +link(href="host-reservations.html") HOST reservations NEW (host-reservations.html)
+        +link(href="signup.html") Sign Up (signup.html)
+        +link(href="signup-verification-message.html") Sign Up verification message (signup-verification-message.html)
+        +link(href="signup-afterverification-message-host.html") Sign Up after verification message (for host) (signup-afterverification-message-host.html)
+        +link(href="signup-afterverification-message.html") Sign Up after verification message (signup-afterverification-message.html)
+        //- +link(href="signup-host-info.html") Sign Up host important info (signup-host-info.html)
 
       +page-title._small Попапы
       +e.list
